--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -49,44 +49,17 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update -qy
-          sudo apt-get install -y libglib2.0-dev attr automake gettext autopoint bison  dbus gtk-doc-tools \
-          libfuse3-dev ostree libostree-dev libarchive-dev libzstd-dev libcap-dev libattr1-dev libdw-dev libelf-dev python3-pyparsing \
-          libjson-glib-dev shared-mime-info desktop-file-utils libpolkit-agent-1-dev libpolkit-gobject-1-dev \
-          libseccomp-dev libsoup2.4-dev libcurl4-openssl-dev libsystemd-dev libxml2-utils libgpgme11-dev gobject-introspection \
-          libgirepository1.0-dev libappstream-dev libdconf-dev clang socat meson libdbus-1-dev e2fslibs-dev bubblewrap xdg-dbus-proxy \
-          python3-pip meson ninja-build libyaml-dev libstemmer-dev gperf itstool libmalcontent-0-dev
-
-
-      - name: Check out flatpak
-        uses: actions/checkout@v4
-        with:
-          submodules: true
-    
-      - name: Build appstream dependency # (We need at least 0.15.3 for the g_once fix)
-        run: |
-          sudo pip3 install 'meson~=0.62'
-          git clone --branch v0.15.4 --depth 1 --no-tags https://github.com/ximion/appstream.git ./appstream
-          pushd ./appstream
-          meson setup --prefix=/usr _build
-          ninja -C _build
-          sudo ninja -C _build install
-          popd
-
-      - name: Build flatpak
-        run: ninja -C _build
-        env:
-          ASAN_OPTIONS: detect_leaks=0 # Right now we're not fully clean, but this gets us use-after-free etc
-      
-      - name: Run tests
-        run: meson test -C _build
-        env:
-          ASAN_OPTIONS: detect_leaks=0 # Right now we're not fully clean, but this gets us use-after-free etc
-          LC_ALL: en_US.UTF-8
+          sudo apt-get install -y flatpak-builder flatpak
+          sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          sudo flatpak install -y git flatpak flatpak-builder gnome-sdk
+          sudo flatpak update -y
+          sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
+          sudo apt-get install -y
 
       - name: Bundle Flatpak
         run: |
-          meson setup _build
-          meson install -C _build
+          meson setup org.gnome.zbrown.glosung.json
+          meson install -C org.gnome.zbrown.glosung.json
 
       - name: Install and Run Flatpak
         run: |
