--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -51,7 +51,7 @@ jobs:
           sudo apt-get update -qy
           sudo apt-get install -y flatpak-builder flatpak
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-          sudo flatpak install -y git flatpak flatpak-builder org.gnome.Sdk//43
+          sudo flatpak install -y flatpak flatpak-builder org.gnome.Sdk//43
           sudo flatpak update -y
           sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
           sudo apt-get install -y
