--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -54,7 +54,7 @@ jobs:
           sudo flatpak install -y flatpak flatpak-builder org.gnome.Sdk//43
           sudo flatpak update -y
           sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
-          sudo apt-get install -y
+          sudo apt-get install -y app/org.flatpak.flat-manager-client/x86_64/stable
 
       - name: Bundle Flatpak
         run: |
