--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -51,6 +51,7 @@ jobs:
           sudo apt-get update -qy
           sudo apt-get install -y flatpak-builder flatpak
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          sudo flatpak install -y flathub org.gnome.Sdk/x86_64/3.38
           sudo flatpak install -y flathub org.gnome.Sdk//43
           sudo flatpak update -y
           sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
@@ -58,10 +59,9 @@ jobs:
 
       - name: Projekt Flatpak
         run: |
-          flatpak-builder --force-clean builddir org.gnome.zbrown.glosung.json
-          flatpak-builder --repo=repo --force-clean builddir org.gnome.zbrown.glosung.json
-          flatpak-builder --install --user repo builddir org.gnome.zbrown.glosung.json
-          flatpak run --user org.gnome.zbrown.glosung.json
+          flatpak-builder --force-clean builddir com.glossung.app.json
+          flatpak-builder --repo=repo --force-clean builddir com.glossung.app.json
+          flatpak-builder --install --user repo builddir com.glossung.app.json
 
       - name: Install and Run Flatpak
         run: |
