--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -56,6 +56,7 @@ jobs:
           sudo flatpak update -y
           sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
           sudo apt-get install -y
+          sudo flatpak install --user org.gnome.Sdk master -y
 
       - name: Projekt Flatpak
         run: |
