--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -51,6 +51,7 @@ jobs:
           sudo apt-get update -qy
           sudo apt-get install -y flatpak-builder flatpak
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          sudo flatpak install --user org.gnome.Sdk master -y
           sudo flatpak install -y flathub org.gnome.Sdk/x86_64/3.38
           sudo flatpak install -y flathub org.gnome.Sdk//43
           sudo flatpak update -y
