--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -50,6 +50,8 @@ jobs:
         run: |
           sudo apt-get update -qy
           sudo apt-get install -y flatpak-builder flatpak
+          sudo flatpak install -y remote_name org.gnome.Sdk
+          sudo flatpak install -y flathub org.gnome.Sdk master -y
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
           sudo flatpak install --user org.gnome.Sdk master -y
           sudo flatpak install -y flathub org.gnome.Sdk/x86_64/3.38
@@ -57,7 +59,6 @@ jobs:
           sudo flatpak update -y
           sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
           sudo apt-get install -y
-          sudo flatpak install --user org.gnome.Sdk master -y
 
       - name: Projekt Flatpak
         run: |
