--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           sudo apt-get update -qy
           sudo apt-get install -y flatpak-builder flatpak
-          sudo flatpak install -y remote_name org.gnome.Sdk
+          sudo flatpak install --user org.gnome.Sdk master -y
           sudo flatpak install -y flathub org.gnome.Sdk master -y
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
           sudo flatpak install --user org.gnome.Sdk master -y
