--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,11 +1,11 @@
-name: "Nightly Build"
+name: Nightly Build
 
 on:
-  schedule:
-    - cron: "0 1 * * *"
+ schedule:
+    - cron: "0 2 * * *"
 
 jobs:
-  check:
+ check:
     runs-on: ubuntu-latest
     outputs:
       changes: ${{ steps.nightly-check.outputs.changes }}
@@ -14,9 +14,10 @@ jobs:
         name: Check for changes since last nightly
         uses: lukecarr/nightly-check@v0.2.0
 
-  nightly:
+ nightly:
     runs-on: ubuntu-latest
     needs: check
+    if: ${{ needs.check.outputs.changes == 'true' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -41,7 +42,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install SCons python-gettext
-
+          
       - name: Build
         run: |
           scons
