create on Merge

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Create Release on Merge
         if: github.event.pull_request.merged == true
         run: |
-          git config --local user.email "nued.a@yahoo.com
+          git config --local user.email "nued.a@yahoo.com"
           git config --local user.name "nuedAB"
           git tag -a v${{ github.event.pull_request.number }} -m "Version ${{ github.event.pull_request.number }}"
           git push origin v${{ github.event.pull_request.number }}
