--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -38,3 +38,24 @@ jobs:
         run: |
           scons
   
+      - name: Install Flatpak dependencies
+        run: |
+          sudo add-apt-repository ppa:alexlarsson/flatpak -y
+          sudo apt update
+          sudo apt install flatpak flatpak-builder flatpak-runtime -y
+
+      - name: Build Flatpak
+        run: |
+          flatpak-builder --force-clean --repo=repo your-app org.gnome.zbrown.glosung.json
+  
+      - name: Publish Flatpak
+        uses: actions/upload-artifact@v2
+        with:
+          name: flatpak-artifact
+          path: repo
+  
+      - name: Publish Flatpak Repository
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.TOKEN }}
+          publish_dir: ./repo
