--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           sudo add-apt-repository ppa:alexlarsson/flatpak -y
           sudo apt update
+          sudo apt install flatpak -y
           sudo apt install flatpak flatpak-builder flatpak-runtime -y
 
       - name: Build Flatpak
