--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,7 +44,7 @@ jobs:
           sudo apt-get install -y flatpak-builder flatpak
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
           sudo flatpak install -y flathub org.gnome.Sdk//43
-          sudo flatpak install -y flathub org.gnome.Sdk/x86_64/3.38
+          sudo flatpak install -y flathub org.gnome.Platform/x86_64/3.38
           sudo flatpak update -y
           sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
           sudo apt-get install -y
