auf rtrue gesetzt

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,7 +18,7 @@ jobs:
   nightly:
     runs-on: ubuntu-latest
     needs: check
-    if: ${{ needs.check.outputs.changes == 'false' }}
+    if: ${{ needs.check.outputs.changes == 'true' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
