--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -30,9 +30,11 @@ jobs:
         run: echo "::set-output name=DATE::$(date +'%Y-%m-%d')"
 
       - name: Extract release version
+        # id must be specified to retrieve the output of the step
         id: extract-version-number
         uses: michmich112/extract-version@main
         with:
+          # specify here the path to your version file (e.g. package.json, pom.xml...)with:
           version-file: SConstruct
           schema: major.minor.build
 
