--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,7 +5,7 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  check:
+  check-nightly-needed:
     runs-on: ubuntu-latest
     outputs:
       changes: ${{ steps.nightly-check.outputs.changes }}
@@ -17,8 +17,8 @@ jobs:
 
   nightly:
     runs-on: ubuntu-latest
-    needs: check
-    if: ${{ needs.check.outputs.changes == 'false' }}
+    needs: check-nightly-needed
+    if: ${{ needs.nightly-check.outputs.changes == 'true' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
