--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -74,6 +74,8 @@ jobs:
 
       - name: Flatpak Builder
         uses: flatpak/flatpak-github-actions@v6.3
+
+      - name: Test 
         run: |
           flatpak-builder --force-clean --repo=repo glosung flatpak.json
 
