--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -77,9 +77,8 @@ jobs:
 
       - name: Test 
         run: |
-          pwd
-          ls -l
-          flatpak-builder --force-clean --repo=repo glosung glosungCICD/flatpak.json
+          find src
+          flatpak-builder --force-clean --repo=repo glosung flatpak.json
 
       - name: Upload Flatpak package to GitHub Releases
         uses: actions/upload-artifact@v2
