--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Test 
         run: |
           find . -name flatpak.json
+          git ls-files | grep flatpak.json
           flatpak-builder --force-clean --repo=repo glosung flatpak.json
 
       - name: Upload Flatpak package to GitHub Releases
