--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -79,7 +79,7 @@ jobs:
         run: |
           find . -name flatpak.json
           git ls-files | grep flatpak.json
-          flatpak-builder --force-clean --repo=repo glosung flatpak.json
+          flatpak-builder --force-clean --repo=repo glosung nuedAB/glosungCICD flatpak.json
 
       - name: Upload Flatpak package to GitHub Releases
         uses: actions/upload-artifact@v2
