--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -75,15 +75,18 @@ jobs:
       - name: Flatpak Builder
         uses: flatpak/flatpak-github-actions@v6.3
 
+      - name: Create tar file
+        run: zip -r glosung.tar.xz . -x ".git/*" ".github/*" "TODO" "screenshot.png" ".gitignore" "glosung.svg" "herrnhut.svg" "README.md" "INSTALL" "org.flatpak.glosung.yaml" "org.gnome.zbrown.glosung.json" "publish_flatpak.sh" "yamltest.yml" "publish_flatpak.sh" "CHANGELOG.md"
+
       - name: Test 
         run: |
           find . -name flatpak.json
-          flatpak-builder --force-clean --repo=gitg-repo build flatpak.json
+          flatpak-builder build-dir flatpak.json
+          flatpak-builder --force-clean --repo=repo glosung nuedAB/glosungCICD/flatpak.json
 
       - name: Upload Flatpak package to GitHub Releases
         uses: actions/upload-artifact@v2
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           name: flatpak-package
-          path: path/to/your/flatpak-packag
-          
+          path: ./glosung.tar.xz
