--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -78,7 +78,8 @@ jobs:
       - name: Test 
         run: |
           find . -name flatpak.json
-          flatpak-builder --force-clean --repo=repo glosung ./flatpak.json
+          flatpak-builder --force-clean --repo=repo --build-dir=build-dir glosung ./flatpak.json
+
 
       - name: Upload Flatpak package to GitHub Releases
         uses: actions/upload-artifact@v2
