--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Test 
         run: |
-          flatpak-builder --force-clean --repo=https://github.com/nuedAB/glosungCICD.git glosung ./build-dir/flatpak.json
+          flatpak-builder --force-clean --repo=https://github.com/nuedAB/glosungCICD.git glosung org.flatpak.json
 
 
       - name: Upload Flatpak package to GitHub Releases
