--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,10 @@
 name: Release on Merge
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
-    types:
-      - closed
+    branches: [ main ]
 
 jobs:
   release:
@@ -12,6 +13,19 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Set up Flatpak environment
+        run: |
+          sudo apt-get update -qy
+          sudo apt-get install -y flatpak-builder flatpak
+          sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          sudo flatpak install -y flathub org.gnome.Sdk//43
+          sudo flatpak update -y
+          sudo flatpak install -y flathub org.freedesktop.Platform.GL.default//23.08
+          sudo apt-get install -y        
+
+      - name: Flatpak Builder
+        uses: flatpak/flatpak-github-actions@v6.3
 
       - name: Create Release on Merge
         if: github.event.pull_request.merged == true
@@ -76,3 +90,9 @@ jobs:
           asset_name: glosung.tar.xz
           asset_content_type: application/tar.xz
           
+      - name: Upload Flatpak package to GitHub Releases
+        uses: actions/upload-artifact@v2
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          name: flatpak-package
+          path: ./glosung.zip
