--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -91,7 +91,9 @@ jobs:
           asset_content_type: application/tar.xz
           
       - name: Upload Flatpak package to GitHub Releases
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./glosung.tar.xz
