--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -93,3 +93,12 @@ jobs:
           asset_path: ./glosung.tar.xz
           asset_name: org.glosung.flatpak
           asset_content_type: application/flatpak
+
+      - uses: flatpak/flatpak-github-actions/flat-manager@v4
+        name: "Deploy"
+        with:
+          repository: ${{ steps.create_release.outputs.upload_url }}
+          flat-manager-url: https://flatpak-api.elementary.io
+          token: ${{ secrets.TOKEN }}
+          end-of-life: "The application has been renamed to..."
+          end-of-life-rebase: "org.zbrown.Palette"  
