--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -95,7 +95,7 @@ jobs:
 
       - name: "Deploy Flatpak"
         uses: flatpak/flatpak-github-actions/flat-manager@v4
-        with:
-          repository: https://github.com/nuedAB/glosungCICD.git
-          flat-manager-url: https://github.com/nuedAB/glosungCICD.git
+         with:
+          repository: elementary
+          flat-manager-url: https://flatpak-api.elementary.io
           token: ${{ secrets.TOKEN }}
