--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,6 +15,9 @@ jobs:
         name: Check for changes since last nightly
         uses: lukecarr/nightly-check@v0.2.0
 
+      - name: Debug Output
+        run: echo "Changes: ${{ steps.nightly-check.outputs.changes }}"
+
   nightly:
     runs-on: ubuntu-latest
     needs: check-nightly-needed
