--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,10 @@
 name: Release on Merge
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
-    types:
-      - closed
+    branches: [ main ]
 
 jobs:
   release:
@@ -36,6 +37,9 @@ jobs:
 
       - name: Create tar file
         run: zip -r glosung.tar.xz . -x ".git/*" ".github/*" "TODO" "screenshot.png" ".gitignore" "glosung.svg" "herrnhut.svg" "README.md" "INSTALL" "org.flatpak.json" "CHANGELOG.md"
+
+      - name: Create flatpak file
+        run: zip -r glosung.tar.xz app.flatpak
 
       - name: Extract release version
         id: extract-version-number
