--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,20 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       changes: ${{ steps.nightly-check.outputs.changes }}
-      
     steps:
       - id: nightly-check
         name: Check for changes since last nightly
         uses: lukecarr/nightly-check@v0.2.0
 
-      - name: Debug Output
-        run: |
-          echo "Changes: ${{ steps.nightly-check.outputs.changes }}"
 
   nightly:
     runs-on: ubuntu-latest
     needs: check-nightly-needed
-    if: ${{ needs.nightly-check.outputs.changes == 'true' }}
+    if: ${{ needs.nightly-check.outputs.changes == 'false' }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
